# vulvul-gh-trivy-scanner

./: .gitignore  LICENSE  README.md  README_JP.md  pyproject.toml
config/: repos.json.sample
doc/en/: README.md  api.md  logic.md  ops.md
doc/jp/: README.md  api.md  logic.md  ops.md
src/vulvul_gh_trivy_scanner/: api.py  cli.py  get_vuls.py  infra.py  main_actions.py  main_portable.py  models_repo.py  models_vuln.py  trivy_runner.py
test/unit/: conftest.py  test_api.py  test_get_vuls_concurrency.py  test_get_vuls_flow.py  test_get_vuls_parse.py  test_infra.py  test_main_actions.py  test_main_portable.py  test_models_repo.py  test_models_vuln.py  test_trivy_runner.py
